--- a/ex-1/style.css
+++ b/ex-1/style.css
@@ -1,1 +1,11 @@
-/* start coding here */
+input {
+  height: 50px;
+  width: 240px;
+  border-radius: 3px;
+}
+button {
+  width: 120px;
+  height: 36px;
+  background-color: khaki;
+  border: lightgrey;
+}
